@@ -1,6 +1,7 @@
 1.6.4
 * Changed the first parameter to NotifyTxDel() to be more descriptive (than just TxID)
 * Do not use VER_LOW_S for now (to verify mempool txs) as it is baning some peers
+* Enforce CVS verification for blocks height 417312 or higher (not for testnet)
 
 1.6.3 - 2016-05-28
 * Lib: Inteface to TheBlueMatt's block_validator tests - see https://github.com/piotrnar/btc_block_validator
